# NerpyBot

./: .coderabbit.yaml  .dockerignore  .flake8  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  CHANGELOG  CLAUDE.md  Dockerfile  LICENSE  Pipfile  README.md  alembic-humanmusic.ini  alembic-nerpybot.ini  alembic.ini  biome.json  cli.py  database_migrations.Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/: FUNDING.yml  codeql-config.yml  dependabot.yml
.github/workflows/: build.yml  bump.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  docker-pr-build.yml  docker-pr.yml  docker.yml  format.yml  lint.yml  pr_agent.yml  release-badge.yml  release.yml  test.yml
.run/: HumanMusic.run.xml  NerdyBot.run.xml  WebApp.run.xml
HumanMusic/: HumanMusic.py  config.ini.template  db.db
HumanMusic/models/: __init__.py
HumanMusic/utils/: __init__.py  checks.py  conversation.py  download.py  format.py  log.py
NerdyPy/: NerdyPy.py  bot.py  config.ini.template  config.py.template  config.yaml.template  requirements.txt  run.py  setup.py
NerdyPy/locales/: lang_de.yaml  lang_en.yaml
NerdyPy/models/: AutoDelete.py  AutoKicker.py  GuildPrefix.py  RaidEncounter.py  RaidEncounterRole.py  RaidEvent.py  RaidTemplate.py  Reminder.py  RoleChecker.py  Tag.py  TagEntry.py  TimedMessage.py  Twitch.py  __init__.py  admin.py  application.py  botmod.py  default_channel.py  guild.py  guild_prefix.py  leavemsg.py  moderation.py  music.py  permissions.py  premium.py  raidplaner.py  reactionrole.py  reminder.py  rolechecker.py  rolemanage.py  tag.py  tagentry.py  tagging.py  timed_message.py  twitch.py  wow.py
NerdyPy/modules/: admin.py  application.py  audio.py  autodelete.py  fun.py  league.py  leavemsg.py  management.py  moderation.py  music.py  operator.py  raid.py  raidplaner.py  random.py  reactionrole.py  reminder.py  rolemanage.py  roles.py  search.py  server_admin.py  tagging.py  timed.py  twitch.py  utility.py  voicecontrol.py  wow.py
NerdyPy/utils/: __init__.py  account_resolution.py  audio.py  blizzard.py  cache.py  checks.py  cog.py  config.py  constants.py  conversation.py  database.py  download.py  duration.py  error_throttle.py  errors.py  format.py  helpers.py  logging.py  permissions.py  reminder.py  schedule.py  send.py  strings.py  timed.py  valkey.py
config/: humanmusic.yaml.example  nerpybot.yaml.example
database-migrations/: env.py
database-migrations/versions/: 001_text_to_unicodetext.py  002_add_accountgroupdata.py  003_add_unique_guild_config.py  004_add_enabled_to_reminder_and_autodelete.py  005_rewrite_reminder_schema.py  006_application_multi_role.py  007_reset_postgresql_sequences.py  008_add_crafting_order_cleanup.py  009_add_crafting_order_names.py  010_add_application_vote_voter_name.py  011_add_wow_guild_name_display.py  012_add_crafting_order_wowhead_url.py  013_add_locale_and_version_columns.py  014_add_crafting_order_item_name_localized.py  015_add_recipe_cache_bind_quality.py  016_add_recipe_cache_category_name_locales.py  017_expand_reminder_channel_name.py  018_add_roletype_to_applicationguildrole_pk.py  019_add_unique_answer_and_template_constraints.py  020_add_reviewmessageid_index.py  121bb784c68a_added_remindermessage_to_rolechecker.py  443fdce72be4_renamed_timedmessage_to_remindermessage.py  493f61588ed5_leavemessage_message_to_unicodetext.py  a1b2c3d4e5f6_add_leave_message_table.py
docs/: MIGRATION_MARIADB_TO_POSTGRESQL.md  admin.md  application.md  architecture.md  crafting-order.md  fun.md  league.md  leavemsg.md  moderation.md  music.md  operator.md  raidplaner.md  random.md  reactionrole.md  release-process.md  reminder.md  rolemanage.md  roles.md  search.md  server_admin.md  tagging.md  utility.md  voicecontrol.md  web-dashboard.md  wow.md
scripts/: setup_test_guild.py
tests/: __init__.py  conftest.py  db_helpers.py  test_app_command_errors.py  test_bot_config.py  test_bot_functions.py  test_bot_initialization.py  test_db_connection.py  test_error_counter.py  test_migrations.py  test_module_disable.py  test_valkey_subscriber.py
tests/integration/: __init__.py  test_application_conversation.py  test_conversation.py
tests/models/: __init__.py  conftest.py  test_admin_model.py  test_application.py  test_crafting_order_models.py  test_music_models.py  test_recipe_cache_decorator.py  test_reminder.py  test_tag.py  test_twitch_models.py
tests/modules/: __init__.py  test_admin.py  test_admin_disable.py  test_admin_errors.py  test_admin_language.py  test_application.py  (+28 more)
web/: app.py  cache.py  config.py  dependencies.py  schemas.py  twitch.py  twitch_reconciler.py  valkey.py
(+144 files in other folders)
