[project]
name = "NerpyBot"
description = "The nerdiest Bot on Discord!"
version = "0.4.14"
authors = [
    { name = "Rico Wesenberg", email = "r.wesenberg@gmail.com" },
    { name = "Dennis Bernardy", email = "bernardyd@gmail.com" }
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
bot = [
    "discord-py[voice]==2.6.4",
    "google-api-python-client",
    "SQLAlchemy",
    "pymysql",
    "ffmpeg-python",
    "pytimeparse2",
    "humanize",
    "igdb-api-v4",
    "twitchAPI",
    "aiohttp",
    "idna",
    "pynacl",
    "pyyaml",
    "blizzapi",
    "openweather-wrapper",
    "requests-cache",
    "cachetools",
    "matplotlib",
    "yt-dlp",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]
migrations = [
    "SQLAlchemy",
    "alembic",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    # discord.py uses deprecated asyncio.iscoroutinefunction (will be fixed when discord.py updates)
    "ignore::DeprecationWarning:discord.ext.commands.core",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.uv]
default-groups = ["bot"]
