[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NerpyBot"
description = "The nerdiest Bot on Discord!"
version = "0.5.0"
authors = [
    { name = "Rico Wesenberg", email = "r.wesenberg@gmail.com" },
    { name = "Dennis Bernardy", email = "bernardyd@gmail.com" }
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.13"

[project.scripts]
nerpybot = "cli:bot"
alembic-nerpybot = "cli:alembic_nerpybot"
alembic-humanmusic = "cli:alembic_humanmusic"

[dependency-groups]
bot = [
    "discord-py[voice]==2.6.4",
    "google-api-python-client",
    "SQLAlchemy",
    "pymysql",
    "ffmpeg-python",
    "pytimeparse2",
    "humanize",
    "aiohttp",
    "idna",
    "pynacl",
    "pyyaml",
    "blizzapi",
    "requests-cache",
    "cachetools",
    "yt-dlp",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]
migrations = [
    "SQLAlchemy",
    "alembic",
    "pymysql",
    "pyyaml",
]

[tool.setuptools]
py-modules = ["cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    # discord.py uses deprecated asyncio.iscoroutinefunction (will be fixed when discord.py updates)
    "ignore::DeprecationWarning:discord.ext.commands.core",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.uv]
default-groups = ["bot"]

[tool.coverage.run]
source = ["NerdyPy"]
omit = ["*/tests/*"]
