[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "NerpyBot"
description = "The nerdiest Bot on Discord!"
dynamic = ["version"]
authors = [
    { name = "Rico Wesenberg", email = "r.wesenberg@gmail.com" },
    { name = "Dennis Bernardy", email = "bernardyd@gmail.com" }
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
bot = [
    "discord-py[voice]==2.7.1",
    "google-api-python-client",
    "SQLAlchemy",
    "psycopg[binary]",
    "pytimeparse2",
    "humanize",
    "aiohttp",
    "pyyaml",
    "psutil>=7.0",
    "blizzapi",
    "requests",
    "cachetools",
    "yt-dlp",
    "typer",
    "valkey",
    "alembic",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pre-commit",
    "ruff==0.15.6",
]
web = [
    "fastapi",
    "uvicorn[standard]",
    "PyJWT",
    "httpx",
    "valkey",
    "pyyaml",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    # discord.py uses deprecated asyncio.iscoroutinefunction (will be fixed when discord.py updates)
    "ignore::DeprecationWarning:discord.ext.commands.core",
    # PyJWT warns about short HMAC keys; test secrets are intentionally short
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.uv]
default-groups = ["bot"]

[tool.coverage.run]
source = ["NerdyPy"]
omit = ["*/tests/*"]
